# reca-blender-addon

./: .gitignore  README.md  gemini_blender_bridge.py
antigravity-skill/: SKILL.md
antigravity-skill/references/: tools-reference.md
reca/: __init__.py  blender_manifest.toml  preferences.py  utils.py
reca-blender-mcp/: README.md  pyproject.toml
reca-blender-mcp/src/reca_blender_mcp/: __init__.py  server.py
reca/modules/: ai_integration.py  batch_processor.py  material_tools.py  mcp_server.py  procedural_gen.py  quick_tools.py  render_manager.py  scene_builder.py
