[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reca-blender-mcp"
version = "1.0.0"
description = "MCP server for controlling Blender via RECA addon — 18 tools for 3D scene manipulation, materials, rendering, procedural generation, and animation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "RECA Team" },
]
keywords = ["mcp", "blender", "3d", "ai", "model-context-protocol", "reca"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/harueoff/reca-blender-addon"
Repository = "https://github.com/harueoff/reca-blender-addon"
Issues = "https://github.com/harueoff/reca-blender-addon/issues"

[project.scripts]
reca-blender-mcp = "reca_blender_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/reca_blender_mcp"]
